exports[`test basic updating 1`] = `
<div>
  Hello 
  esa
</div>
`;

exports[`test basic updating 2`] = `
<div>
  Hello 
  matti
</div>
`;

exports[`test can use function to update the state 1`] = `
<div>
  0
</div>
`;

exports[`test can use function to update the state 2`] = `
<div>
  1
</div>
`;

exports[`test pass scope as a prop 1`] = `
<div>
  Hello 
  esa
</div>
`;

exports[`test pass scope as a prop 2`] = `
<div>
  Hello 
  matti
</div>
`;

exports[`test updating with map state 1`] = `
<div>
  Hello 
  ESA
</div>
`;

exports[`test updating with map state 2`] = `
<div>
  Hello 
  MATTI
</div>
`;
